2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* srfi-2.scm (and-let*): Use `re-export-syntax' instead of
	`export-syntax'.

2001-07-11  Gary Houston  <ghouston@arglist.com>

	* srfi-14.c (s_scm_char_set_eq): bug fix: (char-set=) should
	return #t instead of giving wrong-number-of-arguments . take a
	single "rest" argument.  use memcmp instead of a loop to compare
	the values.
	(s_scm_char_set_leq): similarly, (char-set<=) should return #t.
	take a single "rest" argument.
	srfi-14.h: update the declarations.

2001-07-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* README: Cleanup.

2001-07-06  Gary Houston  <ghouston@arglist.com>

	* srfi-1.scm (iota, map, for-each, list-index, member, delete,
	delete!, assoc): roll back the previous change.  instead place
	dummy definitions in a deprecated block at the beginning as in
	srfi-13.scm.
	
2001-07-06  Rob Browning  <rlb@defaultvalue.org>

	* srfi-19.scm (priv:locale-reader): don't need open-output-string.

2001-07-03  Gary Houston  <ghouston@arglist.com>

	* srfi-1.scm (iota, map, for-each, list-index, member, delete,
	delete!, assoc): don't export until the new bindings have been
	created.  otherwise "export" thinks they are being re-exported and
	a deprecation warning is produced.
	(map-in-order): defined and exported, to support lists of unequal
	length.

2001-07-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-1.scm (list-tabulate): Do not go into infinite loop for
	invalid arguments.  Same fix for several other procedures (do not
	use zero?, use <= 0).

2001-07-02  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-1.scm: Replaced calls to `map' in several procedures to
	calls to `map1'.
	(map, for-each): New procedures, extended from R5RS.

2001-06-28  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-4.c: Minor cleanups.

	* srfi-14.c (scm_char_set_fold, scm_char_set_unfold)
	(scm_char_set_unfold_x, scm_char_set_for_each)
	(scm_char_set_map, scm_char_set_filter)