@@ -1,3 +1,9 @@
+2001-07-15  Gary Houston  <ghouston@arglist.com>
+
+	* srfi-14.c (scm_char_set_hash): recognise 0 instead of #f in the
+	opt arg to give default bound, as in final spec.  don't allow
+	negative bounds.
+
 2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* srfi-2.scm (and-let*): Use `re-export-syntax' instead of
